--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - docker-compose -f docker-compose-build.yaml build --parallel
   - docker tag udagram-api-feed isongjosiah/udagram-api-feed:v1
   - docker tag udagram-api-user isongjosiah/udagram-api-user:v1
-  - docker tag udagram-front-end isongjosiah/udagram-frontend:v1
+  - docker tag udagram-frontend isongjosiah/udagram-frontend:v1
   - docker tag reverse-proxy isongjosiah/udagram-reverse-proxy
 
 after_success:
