--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
   - docker tag udagram-api-feed isongjosiah/udagram-api-feed:v1
   - docker tag udagram-api-user isongjosiah/udagram-api-user:v1
   - docker tag udagram-frontend isongjosiah/udagram-frontend:v1
-  - docker tag reverse-proxy isongjosiah/reverse-proxy
+  - docker tag reverse-proxy isongjosiah/reverse-proxy:v1
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
