Update reverse proxy

--- a/udagram-reverse-proxy/nginx.conf
+++ b/udagram-reverse-proxy/nginx.conf
@@ -6,10 +6,10 @@ error_log /dev/stdout debug;
 http {
     sendfile on;
     upstream user {
-        server backend-user-service:8080;
+        server backend-user-service:8080/;
     }
     upstream feed {
-        server backend-feed-service:8080;
+        server backend-feed-service:8080/;
     }
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -18,10 +18,10 @@ http {
     proxy_set_header X-Forwarded-Host $server_name;
     server {
         listen 8080;
-        location /api/v0/feed {
+        location /api/v0/feed/ {
             proxy_pass http://feed;
         }
-        location /api/v0/users {
+        location /api/v0/users/ {
             proxy_pass http://user;
         }
     }
